# cpp-project-starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp  mathx.cpp  mathx.h
test/: CMakeLists.txt  math_test.cpp
